--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,60 @@ html{
     background-color: #17171e;
 }
 
+video {
+  object-fit: cover;
+  position: absolute;
+     top: 0;
+ right: 0;
+ bottom: 0;
+ left: 0;
+    display: block;
+    width: 100%;
+  object-fit: cover;
+
+    z-index: -1;
+    opacity: 0.18;
+}
+
+
+video {
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+@media (min-aspect-ratio: 16/9) {
+  video {
+    width: 100%;
+    height: auto; /* actually taller than viewport */
+  }
+}
+@media (max-aspect-ratio: 16/9) {
+  video {
+    width: auto; /* actually wider than viewport */
+    height: 100%;
+  }
+}
+
+
+.video-wrapper {
+  border: 2px solid #000;
+  width: 400px;
+  height: 200px;
+  position: relative;
+  overflow: hidden;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.header{
+  position: relative;
+  color: white;
+  text-shadow: 1px 1px 8px rgba(0,0,0,0.6);
+}
+
+
+
 * {
   margin: 0;
   padding: 0;
@@ -43,8 +97,8 @@ element.style {
     list-style: none;
     margin: 0;
     padding: 0;
-    margin-top: 30px;
-    margin-bottom: 45px;
+    margin-top: 43px;
+    margin-bottom: 40px;
     font-family: 'Montserrat', sans-serif;    
     display: flex;
     flex-wrap: wrap;
@@ -89,7 +143,7 @@ element.style {
 } 
 
 .upload {
-    margin-top: 35px;
+    margin-top: 30px;
     margin-bottom: 30px;
     font-size: 25px;
     border-radius: 14px;
@@ -207,9 +261,9 @@ button:hover {
 /* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
+  height: 12px;
+  width: 12px;
+  margin: 0 3px;
   background-color: #bbb;
   border-radius: 50%;
   display: inline-block;
@@ -217,7 +271,7 @@ button:hover {
 }
 
 .active, .dot:hover {
-  background-color: #302f2f;
+  background-color: #5950b9;
 }
 
 /* Fading animation */
